LE Fixing footer issue on iPhone landscape.

--- a/css/style.css
+++ b/css/style.css
@@ -394,6 +394,7 @@
 			position: absolute;
 			text-align: center;
 			width: 100%;
+			z-index: -1;
 		}
 
 	/* Monkey Mob */
